[gd_scene load_steps=10 format=1]

[ext_resource path="res://game/gui/victory/Victory.gd" type="Script" id=1]
[ext_resource path="res://art/starfield.jpg" type="Texture" id=2]
[ext_resource path="res://art/Cartoon-Astronaut.png" type="Texture" id=3]
[ext_resource path="res://fonts/computerspeakfont.fnt" type="BitmapFont" id=4]
[ext_resource path="res://QuitButton.gd" type="Script" id=5]
[ext_resource path="res://art/victory.smp" type="Sample" id=6]

[sub_resource type="Animation" id=1]

resource/name = "grow"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "scroll"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="SampleLibrary" id=3]

samples/victory = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="Victory" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite_Starfield" type="Sprite" parent="."]

transform/pos = Vector2( 399.831, 323.003 )
texture = ExtResource( 2 )

[node name="Sprite_Astronaut" type="Sprite" parent="."]

transform/pos = Vector2( 404.184, 298.895 )
transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite_Astronaut"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/grow = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label_Victory" type="Label" parent="."]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 109.0
margin/top = 37.0
margin/right = 259.0
margin/bottom = 61.0
custom_fonts/font = ExtResource( 4 )
text = "Victory Comrade!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_Score" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 133.0
margin/top = 501.0
margin/right = 248.0
margin/bottom = 525.0
custom_fonts/font = ExtResource( 4 )
text = "Final time: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label_Score"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/scroll = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ScoreNode" type="Node2D" parent="."]

[node name="ButtonNode" type="Node2D" parent="."]

[node name="QuitArray" type="VButtonArray" parent="ButtonNode"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
flat = false
button/count = 0
button/min_button_size = -1.0
button/align = 110
script/script = ExtResource( 5 )

[node name="Label_Quit" type="Button" parent="ButtonNode/QuitArray"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 246.0
margin/right = 291.0
margin/bottom = 276.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Press \"Q\" to quit"
flat = false

[node name="Sample_victory" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="button_down" from="ButtonNode/QuitArray/Label_Quit" to="." method="_on_Label_Quit_button_down"]

[connection signal="pressed" from="ButtonNode/QuitArray/Label_Quit" to="ButtonNode/QuitArray" method="_on_Label_Quit_pressed"]


